--- a/Portal.Client/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Portal.Client/ClientApp/app/components/navmenu/navmenu.component.html
@@ -17,14 +17,10 @@
                         <span class='glyphicon glyphicon-home'></span> Home
                     </a>
                 </li>
+
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <a [routerLink]="['/vacation-bank']">
+                        <span class='glyphicon glyphicon-th-list'></span> VacationBank
                     </a>
                 </li>
             </ul>
