--- a/Portal.Client/ClientApp/app/components/vacationBank/vacationBank.component.html
+++ b/Portal.Client/ClientApp/app/components/vacationBank/vacationBank.component.html
@@ -1,14 +1,4 @@
 <h1>Vacations</h1>
-
-<table class='table' *ngIf="vacationInfo">
-    <thead>
-        <tr>
-            <th>Number of Hours</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of vacationInfo">
-            <td>{{ employee.VacationHours }}</td>
-        </tr>
-    </tbody>
-</table>
+<span>{{ employee.vacationHours }}</span>
+<span>{{ employee.firstName }}</span>
+<span>{{ employee.lastName }}</span>
